# arm_ws

src/arm3dof/: CMakeLists.txt  README.md  package.xml
src/arm3dof/config/: bridge.yaml
src/arm3dof/demo_video.mp4/: Screencast from 2025-11-29 06-34-01.webm
src/arm3dof/launch/: arm_demo.launch.py
src/arm3dof/models/: model.sdf
src/arm3dof/models/arm3dof/: model.config
src/arm3dof/src/: move_demo.py
